Performance Tests added